<resources>
    <string name="app_name">UCSD Eats</string>
    <string name="title_activity_login">Sign in</string>
    <string name="cancel">Cancel</string>
    <string name="TBD">N/A</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email (ie somebody@ucsd.edu) </string>
    <string name="prompt_password">Password (8 or more characters)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">The email and password don not match</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_register">Create new account.</string>
    <string name="action_forgot_password">Forgot password?</string>
    <string name="title_activity_new_user">Sign in</string>
    <string name="error_email_already_registered">This email is already registered</string>
    <string name="error_password_not_match">The password does not match</string>

    <!-- Strings related to new user -->
    <string name="profile_prompt">Profile Picture:</string>
    <string name="prompt_re_password">Retype Password</string>
    <string name="full_name">Full Name (ie John Smith)</string>
    <string name="gender_prompt">Gender:</string>
    <string name="gender_prompt_male">Male</string>
    <string name="gender_prompt_female">Female</string>
    <string name="action_create_account">Create Account</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="major_prompt">Major:</string>
    <string name="food_prompt">Food Prefereces:</string>
    <string-array name="food_array">
        <item>Select...</item>
        <item>Chinese Food</item>
        <item>Japanese Food</item>
        <item>Thai Food</item>
        <item>Mexican Food</item>
        <item>American Food</item>
        <item>Vietnamese Food</item>
        <item>Deli</item>
        <item>Coffee</item>
        <item>Other</item>
    </string-array>

    <!-- Strings related to home page -->
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="title_activity_trash">TrashActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_forgot_pass">Sign in</string>
    <string name="navigation_search">Search Restaurants</string>
    <string name="navigation_recommend">Recommend Restaurant</string>
    <string name="navigation_friends">My Friends</string>
    <string name="navigation_find_someone">Find Someone to Eat With</string>
    <string name="search_restaurant">Search for a Restaurant</string>
    <string name="search_friend">Search Your Friend List</string>
    <string name="search_eat">Search For Posts</string>
    <string name="random_res">Don\'t know where to eat?</string>

    <!-- Strings related to home page drawer nav -->
    <string name="drawer_about_us">About Us</string>
    <string name="drawer_view_profile">My profile</string>
    <string name="drawer_my_friend">My friend list</string>
    <string name="drawer_logout">Logout</string>
    <string name="drawer_sign">Please sign in first</string>

    <!-- Strings related to forgot password -->
    <string name="retrieve_password">Retrieve Password</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <!-- Strings related to profile page -->
    <string name="email_prompt">Email:</string>
    <string name="password_prompt">Password:</string>
    <string name="name_prompt">Name:</string>
    <string name="phone_number_prompt">Phone Number:</string>
    <string name="food_preference_prompt">Food Preferences:</string>
    <string name="introduction_prompt">Introduction:</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="save_profile_changes">Save Changes</string>

    <!-- Strings related to restaurant page -->
    <string name="num_photos">%1$d of %2$d</string>
    <string name="view_menu">Menu</string>
    <string name="upload_restaurant_photo">Upload Photo</string>
    <string name="write_review">Write Review</string>
    <string name="add_post">Add Post</string>
    <string name="restaurant_hours_prompt">Today\'s Hours: </string>
    <string name="restaurant_loc_prompt">Location: </string>
    <string name="active_posts">User Submited Posts:</string>
    <string name="active_reviews">Reviews:</string>


    <!-- Strings related to profile setting -->
    <string name="my_profile">My profile</string>
    <string name="action_change_password">Change Password</string>
    <string name="action_delete_account">Delete Account</string>
    <string name="my_email">Email Address</string>
    <string name="my_phone_number">Phone Number</string>
    <string name="my_major">Major</string>
    <string name="Introduction">Introduction</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="action_logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="title_activity_change_passwird">ChangePassword</string>
    <string name="title_activity_view_profile">ViewProfile</string>

    <!-- Strings related to change password -->
    <string name="change_password_title">Change your password</string>
    <string name="original_password">Original password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm_change_password">Change password</string>

    <!-- Strings related to EatPostView -->
    <string name="countdown_time">Post Valid for %1$d Hours %2$d Minutes</string>
    <string name="time_posted">Post Activated at %1$d:%2$d Pacific</string>
    <string name="seat_available">Seats Available: %1$d out of %2$d</string>

    <!-- Strings related to add posts -->
    <string name="set_duration">Set Post Duration:</string>
    <string name="num_seats">Number of Seats:</string>
    <string name="restaruant_name_prompt">Restaurant:</string>
    <string-array name="restaurant_array">
        <item>64 Degrees</item>
        <item>Pines</item>
        <item>Roots</item>
        <item>64 North</item>
        <item>Art of Espresso Cafe</item>
        <item>Audrey's Cafe"</item>
        <item>Bella Vista Social Club &amp; Caffe</item>
        <item>Blue Pepper Asian Cuisine</item>
        <item>Bombay Coast</item>
        <item>Burger King</item>
        <item>Cafe Ventanas</item>
        <item>Canyon Vista</item>
        <item>Club Med</item>
        <item>Croutons</item>
        <item>Foodworx</item>
        <item>Goody's Place</item>
        <item>Hops &amp; Salt</item>
        <item>Jamba Juice</item>
        <item>Lemongrass</item>
        <item>OceanView</item>
        <item>Panda Express</item>
        <item>Peet's Coffee &amp; Tea</item>
        <item>Perks</item>
        <item>Round Table Pizza</item>
        <item>Rubio's</item>
        <item>SEED+SPROUT</item>
        <item>Santorini Greek Island Grill</item>
        <item>Shogun</item>
        <item>Starbucks</item>
        <item>Subway</item>
        <item>Taco Villa</item>
        <item>Tapioca Express</item>
        <item>The Bistro</item>
        <item>YogurtWorld</item>
        <item>Zanzibar at The Loft</item>
    </string-array>
    <string name="title_activity_write_review">Write Review</string>
    <string name="title_activity_eat_post">EatPostActivity</string>
    <string name="title_activity_about_us">AboutUs</string>
</resources>
