<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="@dimen/fab_margin"
            android:text="@string/change_password_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/Ucsd_eat" />

        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin_small"
            android:ems="10"
            android:gravity="end"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:padding="@dimen/fab_margin" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin_small"
            android:ems="10"
            android:gravity="end"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="@dimen/fab_margin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:onClick="cancelChanges"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/confirm"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/Ucsd_eat"
                android:onClick="confirmPassword"
                android:text="@string/confirm_change_password" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>