<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.o1.ucsdeats.ProfileActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="189dp"
        android:layout_height="166dp"
        android:layout_marginStart="80dp"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/profile_prompt"
                android:textColor="#000000" />

            <!-- Profile Upload Button -->
            <ImageButton
                android:id="@+id/image_info"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_weight="1"
                android:src="@drawable/ic_add_a_photo_black_24dp" />

            <!-- Email Text Box -->

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.design.widget.TextInputLayout>

            <!-- Name Text Box -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/name_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/full_name"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>


            <!-- Phone Number Text Box -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/phone_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/phone_number_prompt"
                    android:inputType="phone" />



            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:id="@+id/gender_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/fab_margin_small"
                android:layout_weight="1"
                android:orientation="horizontal">

                <!-- Gender Text Prompt -->
                <TextView
                    android:id="@+id/gender_prompt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gender_prompt"
                    android:textColor="#000000" />

                <!-- Male Radio Button -->
                <RadioButton
                    android:id="@+id/gender_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gender_prompt_male" />

                <!-- Female Radio Button -->
                <RadioButton
                    android:id="@+id/gender_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gender_prompt_female" />
            </RadioGroup>

            <!-- Gender Radio Group -->

            <!-- Major Input Layout -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/major_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/major_prompt"></EditText>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/introduction_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/introduction_prompt"></EditText>

            </android.support.design.widget.TextInputLayout>

            <!-- Food Preferences Select Layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/fab_margin_small"
                android:orientation="horizontal">

                <!-- Food Preferences Prompt -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/food_prompt"
                    android:textColor="#000000" />

                <!-- Food Preferences Spinner -->
                <Spinner
                    android:id="@+id/food_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/textbox_shape_arrow"
                    android:entries="@array/food_array"/>
            </LinearLayout>

            <!-- Create Account Button -->
            <Button
                android:id="@+id/save_profile_changes"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:backgroundTint="@color/Ucsd_eat"
                android:onClick="actionSaveChanges"
                android:text="@string/save_profile_changes"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>
