<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.o1.ucsdeats.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- UCSD Eats Logo -->

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_weight="1"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/ucsd_eats_logo" />

            <!-- Email Text Box -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin_small">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/fab_margin_small"
                    android:layout_marginEnd="@dimen/fab_margin"
                    android:layout_marginStart="@dimen/fab_margin"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:background="@drawable/textbox_shape"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <!-- Password Text Box -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/fab_margin"
                    android:layout_marginStart="@dimen/fab_margin"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:background="@drawable/textbox_shape"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <!-- Buttons -->

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/Very_fat_margin"
                android:layout_marginStart="@dimen/Very_fat_margin"
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_weight="1"
                android:backgroundTint="@color/Ucsd_eat"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_weight="1"
                android:orientation="horizontal">

                <!-- Forget Password Button -->
                <Button
                    android:id="@+id/password_forgot_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/fab_margin_small"
                    android:layout_marginEnd="@dimen/fab_margin"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/action_forgot_password"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="@color/Ucsd_eat" />

                <!-- Sign Up Button -->
                <Button
                    android:id="@+id/email_register_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/fab_margin"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/action_register"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="@color/Ucsd_eat" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
